java 11; run past unparse-able files