@@ -1,6 +1,6 @@
 @echo off
-:: palisades.lakes (at) gmail (dot) com
-:: 2018-01-09
+:: palisades.lakes@gmail.com
+:: 2018-09-03
 
 ::set GC=-XX:+AggressiveHeap -XX:+UseStringDeduplication 
 set GC=
@@ -11,22 +11,17 @@ set COMPRESSED=
 set TRACE=
 ::set TRACE=-XX:+PrintGCDetails -XX:+TraceClassUnloading -XX:+TraceClassLoading
 
-set PROF=
-::set PROF=-Xrunhprof:cpu=samples,depth=128,thread=y,doe=y
-
-::set THRUPUT=-d64 -server -XX:+AggressiveOpts 
-set THRUPUT=-d64 -server
+::set THRUPUT=-server -XX:+AggressiveOpts 
+set THRUPUT=-server  -Xbatch
 ::set THRUPUT=
 
 ::set XMX=-Xms29g -Xmx29g -Xmn11g 
-set XMX=-Xms12g -Xmx12g -Xmn5g 
+::set XMX=-Xms12g -Xmx12g -Xmn5g 
+set XMX=-Xms12g -Xmx12g
 
-set OPENS=--add-opens java.base/java.lang=ALL-UNNAMED
 set CP=-cp ./src/scripts/clojure;lib/*
-
-set JAVA_HOME=%JAVA9%
 set JAVA="%JAVA_HOME%\bin\java"
 
-set CMD=%JAVA% %THRUPUT% -ea -dsa -Xbatch %GC% %PROF% %XMX% %COMPRESSED% %TRACE% %OPENS% %CP% clojure.main %*
+set CMD=%JAVA% %THRUPUT% -ea -dsa %GC% %XMX% %COMPRESSED% %TRACE% %CP% clojure.main %*
 ::echo %CMD%
 %CMD%
